--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ h1 {
 li {
   list-style-type: none;
   text-align: center;
-}</style></head><body><h1>vuetify-jsonschema-form</h1><ul><li><a href="./latest">latest</a></li><li><a href="./v0.37.0">v0.37.0</a></li><li><a href="./v0.38.0">v0.38.0</a></li><li><a href="./v0.40.0">v0.40.0</a></li><li><a href="./v0.41.0">v0.41.0</a></li><li><a href="./v0.42.0">v0.42.0</a></li><li><a href="./v0.43.0">v0.43.0</a></li></ul></body></html>
+}</style></head><body><h1>vuetify-jsonschema-form</h1><ul><li><a href="./latest">latest</a></li><li><a href="./v0.37.0">v0.37.0</a></li><li><a href="./v0.38.0">v0.38.0</a></li><li><a href="./v0.40.0">v0.40.0</a></li><li><a href="./v0.41.0">v0.41.0</a></li><li><a href="./v0.42.0">v0.42.0</a></li><li><a href="./v0.43.0">v0.43.0</a></li><li><a href="./v0.44.0">v0.44.0</a></li></ul></body></html>
